language condition and various improves were done.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,10 +12,17 @@
     <string name="upcoming">Upcoming</string>
     <string name="settings">Settings</string>
     <string name="view_all">View All</string>
-    <string name="hello_blank_fragment" />
+    <string name="hello_blank_fragment">Hello World</string>
     <string name="home">Home</string>
     <string name="overview">Overview</string>
     <string name="production_companies">Production Companies</string>
     <string name="production_countries">Production Countries</string>
     <string name="minute">min</string>
+    <string name="genres">Genres</string>
+    <string name="cast">Cast</string>
+    <string name="collection">Collection</string>
+    <string name="similar">Similar</string>
+    <string name="videos">Videos</string>
+    <string name="image">Image</string>
+    <string name="search_movie">Search Movie…</string>
 </resources>
