--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="videos">Videos</string>
     <string name="image">Image</string>
     <string name="search_movie">Search Movie…</string>
+    <string name="add_to_favorites">Add to Favorites</string>
+    <string name="share">Share</string>
 </resources>
