--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="search_movie">Search Movie…</string>
     <string name="add_to_favorites">Add to Favorites</string>
     <string name="share">Share</string>
+    <string name="trending_today">Trending Today</string>
 </resources>
