Recommend info dialog and blur image background were created.

--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -47,6 +47,9 @@
     <string name="polish">Lehçe</string>
     <string name="arabic">Arapça</string>
     <string name="hint">İpucu</string>
+    <string name="recommend_info">İzleyecek bir film bulamadıysan endişelenme. Cinemobile binlerce
+        film arasından sana bir film önerir. Tek yapman gereken alttaki butona tıklamak. Butona
+        uzun tıklarsan film önerme sistemini filtreleyebilirsin.</string>
 
     <string-array name="languages">
         <item>@string/english</item>
